--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,6 @@
     <string name="confirm">Confirm</string>
     <string name="game_room_name">Game Room Name</string>
     <string name="player_list">Player List</string>
-    <string name="game_list">Game List</string>
+    <string name="search_game">Searching for game...</string>
     <string name="start_game">Start Game</string>
 </resources>
