--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="player_list">Player List</string>
     <string name="search_game">Searching for game...</string>
     <string name="start_game">Start Game</string>
+    <string name="start">Start</string>
+    <string name="reset">Reset</string>
+    <string name="role">Role</string>
 </resources>
