--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">App</string>
+    <string name="app_name">Mafia</string>
     <string name="create_game">Create Game</string>
     <string name="join_game">Join Game</string>
     <string name="player_name">Player Name</string>
