--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,15 +24,15 @@
         the Innocents – the uninformed majority.
             This game has two phases; night, when special characters get to make their move, and “day” when Innocents vote to eliminate a
         Mafiosi suspects that try to hide along them! The game ends when all the Mafia members are eliminated or there are more(smt same) Mafia members than Innocents.
-        The main goal of the Mafia is just too kill evryone, meanwhile citizens jsut want to find who is mafia and get ride of them. *PLEASE DONT PICK N EACH TOHER PHONES DURING THE NIGHT STAGE*
+        The main goal of the Mafia is just too kill everyone, meanwhile citizens just want to find who is mafia and get ride of them. *PLEASE DONT PEEK ON
+        EACH OTHER'S PHONES DURING THE NIGHT STAGE*
     </string>
     <string name="rules_mafia">The Mafia - bad guys of the game, who want to burn down the city and have to kill all innocents first.
         These players know the identities of their teammates and can determine who will be killed every night.</string>
-    <string name="rules_doctor">The holly Angel of the city! An innocent who plays plays on the good team and puts his goal to protect other incests.
+    <string name="rules_doctor">The holy Angel of the city! An innocent who plays on the good team and puts his goal to protect other innocents.
         Can protect one person every night from being killed by the mafia(CAN PICK HIMSELF ONLY TWICE!)</string>
-    <string name="rules_villager">Innocent people of the game also known as “townspeople”. These players dont have any special roles or powers, they can enjoy and have fun trying to survive and figure out the Mafiosi along them!
-        </string>
-    <string name="rules_sheriff">The Detective of the city! An innocent who plays plays on the good team and puts his main goal to find a mafia.
-        Has special ability to learn the team of one of the players every night. Have to be careful revealing him self, because mafia definitely will try to kill him first!</string>
+    <string name="rules_villager">Innocent people of the game also known as “townspeople”. These players don\'t have any special roles or powers, they can enjoy and have fun trying to survive and figure out the Mafiosi along them!</string>
+    <string name="rules_sheriff">The Detective of the city! An innocent who  plays on the good team and his main goal is to find out who is the mafia.
+        Has special ability to learn the team of one of the players every night. Has to be careful revealing him self, because mafia definitely will try to kill him first since he can see who they are!</string>
 </resources>
 
