added a 30 seconds option to the spinner in create game

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="length">Round Length</string>
     <string name="rules_button">Rules</string>
     <string-array name="round_length_list">
+        <item>30 seconds</item>
         <item>1 minute</item>
         <item>2 minute</item>
         <item>3 minute</item>
